--- a/src/app/hola-mundo/hola-mundo.component.html
+++ b/src/app/hola-mundo/hola-mundo.component.html
@@ -1,1 +1,11 @@
-<p>hola-mundo works!</p>
+<div class="hola-mundo">  
+    <h1> {{ title }} </h1> 
+    <p>hola-mundo works!</p>
+</div>
+
+<ul>
+    <li *ngFor="let usu of usuarios">
+        {{ usu }}
+    </li>
+</ul>
+
